--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,1 +1,43 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+#quantity-header {
+  width: 150px;
+}
+
+#delete-header {
+  width: 60px;
+}
+
+.table td,
+.table thead th {
+  padding: 5px;
+  height: 50px;
+  vertical-align: middle;
+}
+
+.legendary-animal-container {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 10px;
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+
+section {
+  margin-bottom: 50px;
+}
+
+.checkbox-flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.form-check {
+  margin-right: 20px;
+}
+
+.form-check:last-child {
+  margin-right: 0;
+}
+/*# sourceMappingURL=styles.css.map */
